taass/backupProgetto/Pogetto-TAASS(michele)/Spikes/Spike Kubernetes/other/mongoShop/mongoShopIngress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    io.kompose.service: mongoshopdb
  name: mongoshopdb
spec:
  rules:
  - host: esempio.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mongoshopdb
            port:
              number: 8080
